bugfix: break links for wrapping on safari

--- a/static/styles/custom.sass
+++ b/static/styles/custom.sass
@@ -581,6 +581,8 @@ p
     .excerpt_more
       color: #D04400
       font-weight: bold
+      word-break: break-word
+      word-wrap: break-word
 
     &.partition
       grid-template-columns: 1.5fr 7.5fr
